--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    
+    <title><u>RESUME </u> </title>
+</head>
+<body>
+    <h1>My details</h1>
+    <p>Name:Avula.Surekha<br>
+    Gender: Female<br>
+    Date of birth:27/01/2006<br>
+    Language known:telugu,english <br>
+    Father name:A.Srinivasulu<br>
+     Marital status: unmarried <br>
+     Nationality: Indian
+ </p>
+</body>
+</html>
