--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,8 @@
     <title><u>RESUME </u> </title>
 </head>
 <body>
+    
+    <title><u>RESUME </u> </title>
     <h1>My details</h1>
     <p>Name:Avula.Surekha<br>
     Gender: Female<br>
