--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     
-    <title><u>RESUME </u> </title>
+    <h1><u>RESUME </u> </h1>
     <h1>My details</h1>
     <p>Name:Avula.Surekha<br>
     Gender: Female<br>
