--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     
-    <h1><u>RESUME </u> </h1>
+    <h1 align="center"><u>RESUME </u> </h1>
     <h1>My details</h1>
     <p>Name:Avula.Surekha<br>
     Gender: Female<br>
