--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title><u>RESUME </u> </title>
 </head>
 <body>
-    
     <h1 align="center"><u>RESUME </u> </h1>
     <h1>My details</h1>
     <p>Name:Avula.Surekha<br>
@@ -15,31 +14,21 @@
     Father name:A.Srinivasulu<br>
      Marital status: unmarried <br>
      Nationality: Indian<br>
-        State: Andhrapradesh <br>
+    State: Andhrapradesh <br>
      District: Annamayya</B>
     <h2 align="center"><u>Academic Qualification details</u></h2>
    <p><B><u>1.SSC:</u><br>
-   Board of secondary
-
-,Education, AP 2020-2021, 97%<br>
-<u>2.Intermediate(Mpc):</u><br>
-Board of Intermediate
-
-,Education ,AP
-
-2021-2023, 69.8%<br>
+   Board of secondary,Education, AP 2020-2021, 97%<br>
+<u>2.Intermediate(Mpc):</u><br>Board of Intermediate,Education ,AP 2021-2023, 69.8%<br>
 <u>3.B.Sc computer science (honours major):</u><br>
 first semester-(percentage=8:50)<br>
 second semester-(percentage=8:50)<br>
 third semester- (percentage=9:10)<br>
 fourth  semester- (percentage=8:75)</B><br>
  <h2 align="center"><u>DECLARATION</u></h2>
-
 <B>I hereby declared that the above information given by me is true to best of my Knowledge.</B>
 <h2><u>TECHNICAL SKILLS</u></h2>
-
 <B>MS-Office:- Word, Excel, Power point <br>
-
 programming languages:- C,Java ,DBMS</B>
 <h2 >Date:       </h2>
 <h2>place:        </h2><br>
