--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@ first semester-(percentage=8:50)<br>
 second semester-(percentage=8:50)<br>
 third semester- (percentage=9:10)<br>
 fourth  semester- (percentage=8:75)</B><br>
- <h2 align="center"><u>DECLARATION</u></h2>
+ <h2><u>DECLARATION</u></h2>
 <B>I hereby declared that the above information given by me is true to best of my Knowledge.</B>
 <h2><u>TECHNICAL SKILLS</u></h2>
 <B>MS-Office:- Word, Excel, Power point <br>
 programming languages:- C,Java ,DBMS</B>
-<h2 >Date:       </h2>
-<h2>place:        </h2><br>
-<h2 align="right">Signature:</h2>
+<h2 >Date: 01/07/2025      </h2>
+<h2>place: Rajampet        </h2><br>
+<h2 align="right">Signature:<br>A.surekha</h2>
  </p>
 </body>
 </html>
