--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <p><B><u>1.SSC:</u><br>
    Board of secondary,Education, AP 2020-2021, 97%<br>
 <u>2.Intermediate(Mpc):</u><br>Board of Intermediate,Education ,AP 2021-2023, 69.8%<br>
-<u>3.B.Sc computer science (honours major):</u><br>
+<u>3.B.Sc computer science (honours major)and mathematics (minor):</u><br>
 first semester-(percentage=8:50)<br>
 second semester-(percentage=8:50)<br>
 third semester- (percentage=9:10)<br>
