--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     
-    <title><u>RESUME </u> </title>
+    <title>RESUME </title>
 </head>
 <body>
-    <h1 align="center"><u>RESUME </u> </h1>
+    <h1 align="center">RESUME  </h1>
     <h1>My details</h1>
     <p>Name:Avula.Surekha<br>
     Gender: Female<br>
@@ -15,21 +15,21 @@
      Marital status: unmarried <br>
      Nationality: Indian<br>
     State: Andhrapradesh <br>
-     District: Annamayya</B>
+     District: Annamayya
     <h2 align="center"><u>Academic Qualification details</u></h2>
-   <p><B><u>1.SSC:</u><br>
+   <p><u>1.SSC:</u><br>
    Board of secondary,Education, AP 2020-2021, 97%<br>
 <u>2.Intermediate(Mpc):</u><br>Board of Intermediate,Education ,AP 2021-2023, 69.8%<br>
 <u>3.B.Sc computer science (honours major)and mathematics (minor):</u><br>
-first semester-(percentage=8:50)<br>
-second semester-(percentage=8:50)<br>
-third semester- (percentage=9:10)<br>
-fourth  semester- (percentage=8:75)</B><br>
- <h2><u>DECLARATION</u></h2>
-<B>I here by declared that the above information given by me is true to best of my Knowledge.</B>
-<h2><u>TECHNICAL SKILLS</u></h2>
+first semester-(percentage=8.5%)<br>
+second semester-(percentage=8.5%)<br>
+third semester- (percentage=9.10%)<br>
+fourth  semester- (percentage=8.75%)<br>
+ <h2><u>TECHNICAL SKILLS</u></h2>
 <B>MS-Office:- Word, Excel, Power point <br>
-programming languages:- C,Java ,DBMS</B>
+programming languages:- C,Java ,DBMS
+       <h2><u>DECLARATION</u></h2>
+I here by declared that the above information given by me is true to best of my Knowledge.
 <h2 >Date: 01/07/2025      </h2>
 <h2>place: Rajampet        </h2><br>
 <h2 align="right">Signature:<br>A.surekha</h2>
