--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ second semester-(percentage=8.5%)<br>
 third semester- (percentage=9.10%)<br>
 fourth  semester- (percentage=8.75%)<br>
  <h2><u>TECHNICAL SKILLS</u></h2>
-<B>MS-Office:- Word, Excel, Power point <br>
+MS-Office:- Word, Excel, Power point <br>
 programming languages:- C,Java ,DBMS
        <h2><u>DECLARATION</u></h2>
 I here by declared that the above information given by me is true to best of my Knowledge.
