--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1 align="center">RESUME  </h1>
     <h1>My details</h1>
-    <img src= >
+    <img src= "">
     <p>Name:Avula.Surekha<br>
     Gender: Female<br>
     Date of birth:27/01/2006<br>
