--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <h1 align="center">RESUME  </h1>
     <h1>My details</h1>
-    <img src= "img.jpg" width="200" height="200" >
+    <img src= "Img1.jpg" width="200" height="200" >
     <p>Name:Avula.Surekha<br>
     Gender: Female<br>
     Date of birth:27/01/2006<br>
