--- a/index.html
+++ b/index.html
@@ -16,18 +16,22 @@
      Marital status: unmarried <br>
      Nationality: Indian<br>
     State: Andhrapradesh <br>
-     District: Annamayya
+     District: Annamayya</p>
     <h2 align="center"><u>Academic Qualification details</u></h2>
-   <p><u>1.SSC:</u><br>
-   Board of secondary,Education, AP 2020-2021, 97%<br>
-<u>2.Intermediate(Mpc):</u><br>Board of Intermediate,Education ,AP 2021-2023, 69.8%<br>
-<u>3.B.Sc computer science (honours major)and mathematics (minor):</u><br>
-first semester-(percentage=8.5%)<br>
-second semester-(percentage=8.5%)<br>
-third semester- (percentage=9.10%)<br>
-fourth  semester- (percentage=8.75%)<br>
+   <table border="2"style="border-collapse:collapse;" cellpadding="20px" cellspacing="2px">
+      <tr> <th>SI.NO</th> <th>Qualification</th> <th>University/Board</th> <th>Year</th> <th>percentage</th>
+  <tr> <td>1</td> <td>SSC</td> <td>Board of secondary, 
+  education,AP</td> <td>2020-2021</td>
+  <td>100%</td> </tr>
+  <tr> <td>2</td> <td>Intermediate</td> <td>Board of intermediate, 
+  education,AP</td> <td>2021-2023</td>
+  <td>69.8%</td> </tr>
+  <tr> <td>3</td> <td>BSC computer science (honours major)</td> <td>yvu university, 
+AP</td> <td>2023-2027</td>
+  <td>97%</td> </tr>
+   </table>
  <h2><u>TECHNICAL SKILLS</u></h2>
-MS-Office:- Word, Excel, Power point <br>
+<p>MS-Office:- Word, Excel, Power point <br>
 programming languages:- C,Java ,DBMS
        <h2><u>DECLARATION</u></h2>
 I here by declared that the above information given by me is true to best of my Knowledge.
